[gd_scene load_steps=37 format=2]

[ext_resource path="res://sprites/Game Boy Advance - Pokemon Emerald - Desert Underpass.png" type="Texture" id=1]
[ext_resource path="res://cenas/Portal2.tscn" type="PackedScene" id=2]
[ext_resource path="res://cenas/Level2.gd" type="Script" id=3]
[ext_resource path="res://cenas/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://cenas/battle_level1.gd" type="Script" id=6]
[ext_resource path="res://audio/1-16-Trainer-Battle_.wav" type="AudioStream" id=7]
[ext_resource path="res://sprites/fund.png" type="Texture" id=8]
[ext_resource path="res://sprites/pokemon1.png" type="Texture" id=9]
[ext_resource path="res://NESCyrillic.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://audio/1-58-Fallarbor-Town.wav" type="AudioStream" id=11]
[ext_resource path="res://pokemon2.tres" type="Resource" id=12]
[ext_resource path="res://cenas/inimigue2.tscn" type="PackedScene" id=13]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 44.5, 10 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 122, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12.5, 156.25 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 61.75, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 23.5, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 26.5, 13.2504 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 13, 13.5 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 1, 0, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="DynamicFont" id=10]
size = 40
extra_spacing_top = -4
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0.509804 )

[sub_resource type="DynamicFont" id=12]
size = 64
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=13]
size = 40
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=17]
size = 40
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=18]
size = 64
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemyContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "enemy_damaged"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "enemy_defeated"
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "mini_shake"
length = 0.5

[sub_resource type="Animation" id=23]
resource_name = "shake"
length = 0.5

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 14, 31.5 )

[node name="Level2" type="Node2D"]
script = ExtResource( 3 )

[node name="GameBoyAdvance-PokemonEmerald-DesertUnderpass" type="Sprite" parent="."]
position = Vector2( 511.439, 299.5 )
rotation = -0.000383357
scale = Vector2( 1.86029, 1.64208 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 46, 207 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 73, 185 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 134, 156 )
shape = SubResource( 2 )

[node name="CollisionShape2D42" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 218, 113 )
shape = SubResource( 2 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 46, 300 )
shape = SubResource( 2 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 85, 327 )
shape = SubResource( 2 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 111, 354 )
shape = SubResource( 2 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 139, 379 )
shape = SubResource( 2 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 167, 404 )
shape = SubResource( 2 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 168, 426 )
shape = SubResource( 2 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 194, 452 )
shape = SubResource( 2 )

[node name="CollisionShape2D14" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 224, 482 )
shape = SubResource( 2 )

[node name="CollisionShape2D15" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 291, 508 )
shape = SubResource( 2 )

[node name="CollisionShape2D16" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 364, 537 )
shape = SubResource( 2 )

[node name="CollisionShape2D17" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 444, 512 )
shape = SubResource( 2 )

[node name="CollisionShape2D18" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 477, 486 )
shape = SubResource( 2 )

[node name="CollisionShape2D19" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 502, 460 )
shape = SubResource( 2 )

[node name="CollisionShape2D20" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 533, 434 )
shape = SubResource( 2 )

[node name="CollisionShape2D21" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 563, 407 )
shape = SubResource( 2 )

[node name="CollisionShape2D22" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 593, 381 )
shape = SubResource( 2 )

[node name="CollisionShape2D23" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 594, 356 )
shape = SubResource( 2 )

[node name="CollisionShape2D24" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 623, 327 )
shape = SubResource( 2 )

[node name="CollisionShape2D25" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 649, 301 )
shape = SubResource( 2 )

[node name="CollisionShape2D27" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 733, 326 )
shape = SubResource( 2 )

[node name="CollisionShape2D28" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 770, 350 )
shape = SubResource( 2 )

[node name="CollisionShape2D29" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 911, 351 )
shape = SubResource( 2 )

[node name="CollisionShape2D26" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 706, 301 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 366, 182 )
shape = SubResource( 1 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -10, 149 )
shape = SubResource( 3 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -11, 445 )
shape = SubResource( 3 )

[node name="CollisionShape2D30" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 540, 206 )
shape = SubResource( 4 )

[node name="CollisionShape2D31" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 570, 182 )
shape = SubResource( 4 )

[node name="CollisionShape2D32" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 790, 208 )
shape = SubResource( 4 )

[node name="CollisionShape2D33" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 760, 182 )
shape = SubResource( 4 )

[node name="CollisionShape2D34" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 659, 157 )
shape = SubResource( 4 )

[node name="CollisionShape2D35" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 922, 210 )
shape = SubResource( 4 )

[node name="CollisionShape2D36" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 968, 236 )
shape = SubResource( 4 )

[node name="CollisionShape2D37" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 915, 300 )
shape = SubResource( 5 )

[node name="CollisionShape2D38" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 931, 324 )
shape = SubResource( 6 )

[node name="CollisionShape2D39" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 968, 280 )
rotation = 1.57051
shape = SubResource( 6 )

[node name="CollisionShape2D40" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 180, 116 )
rotation = 1.57051
shape = SubResource( 6 )

[node name="CollisionShape2D43" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 319, 400 )
rotation = 1.57051
shape = SubResource( 6 )

[node name="CollisionShape2D46" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 347, 400 )
rotation = 1.57051
shape = SubResource( 6 )

[node name="CollisionShape2D47" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 376, 380 )
rotation = 1.57051
shape = SubResource( 6 )

[node name="CollisionShape2D44" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 351, 369 )
rotation = 1.57051
shape = SubResource( 6 )

[node name="CollisionShape2D45" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 378, 346 )
rotation = 1.57051
shape = SubResource( 6 )

[node name="CollisionShape2D41" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 253, 136 )
rotation = 1.57051
shape = SubResource( 6 )

[node name="CollisionShape2D48" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 482, 326 )
shape = SubResource( 7 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 26, 258 )

[node name="Portal2" parent="." instance=ExtResource( 2 )]
position = Vector2( 833, 359 )

[node name="MusicaFundo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -8.211

[node name="MusicaBatalha" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -6.846

[node name="battle" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )
enemy = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="battle"]
position = Vector2( 512, 303 )
scale = Vector2( 2.22234, 1.29694 )
texture = ExtResource( 8 )

[node name="EnemyContainer" type="VBoxContainer" parent="battle"]
margin_left = 292.0
margin_top = 52.0
margin_right = 687.0
margin_bottom = 278.0
alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="battle/EnemyContainer"]
margin_top = 95.0
margin_right = 395.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 35 )
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
step = 1.0
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="battle/EnemyContainer/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "HP: 25/50"
align = 1
valign = 1

[node name="Enemy" type="Sprite" parent="battle/EnemyContainer"]
position = Vector2( 200, 194 )
scale = Vector2( 2.26923, 1.97826 )
texture = ExtResource( 9 )

[node name="PlayerPanel" type="Panel" parent="battle"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 454.0
margin_right = 984.0
margin_bottom = 561.0
custom_styles/panel = SubResource( 11 )

[node name="PlayerData" type="HBoxContainer" parent="battle/PlayerPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="battle/PlayerPanel/PlayerData"]
margin_top = 14.0
margin_right = 494.0
margin_bottom = 61.0
size_flags_horizontal = 3
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "PLAYER"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="battle/PlayerPanel/PlayerData"]
margin_left = 498.0
margin_top = 15.0
margin_right = 993.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 45 )
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
step = 1.0
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="battle/PlayerPanel/PlayerData/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = -2.0
margin_bottom = -2.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "HP: 25/50"
align = 1
valign = 1

[node name="ActionsPanel" type="Panel" parent="battle"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -21.0
margin_top = 6.0
margin_right = 1004.0
margin_bottom = 113.0
custom_styles/panel = SubResource( 11 )

[node name="Actions" type="HBoxContainer" parent="battle/ActionsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_constants/separation = 12
alignment = 1

[node name="Attack" type="Button" parent="battle/ActionsPanel/Actions"]
margin_right = 323.0
margin_bottom = 75.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
enabled_focus_mode = 0
text = "ATAQUE"

[node name="Defend" type="Button" parent="battle/ActionsPanel/Actions"]
margin_left = 335.0
margin_right = 658.0
margin_bottom = 75.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
enabled_focus_mode = 0
text = "ESQUIVAR"

[node name="Run" type="Button" parent="battle/ActionsPanel/Actions"]
margin_left = 670.0
margin_right = 993.0
margin_bottom = 75.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
enabled_focus_mode = 0
text = "FUGIR"

[node name="Textbox" type="Panel" parent="battle"]
margin_left = 6.0
margin_top = 14.0
margin_right = 1014.0
margin_bottom = 134.0
custom_styles/panel = SubResource( 16 )

[node name="Label" type="Label" parent="battle/Textbox"]
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 17 )
text = "UM SLOWKING apareceu!"

[node name="ticker" type="Label" parent="battle/Textbox"]
margin_left = 975.0
margin_top = 66.0
margin_right = 999.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 18 )
text = ">"

[node name="AnimationPlayer" type="AnimationPlayer" parent="battle"]
anims/RESET = SubResource( 19 )
anims/enemy_damaged = SubResource( 20 )
anims/enemy_defeated = SubResource( 21 )
anims/mini_shake = SubResource( 22 )
anims/shake = SubResource( 23 )

[node name="inimigue2" parent="." instance=ExtResource( 13 )]
position = Vector2( 366, 227 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 367, 281 )
shape = SubResource( 24 )

[connection signal="pressed" from="battle/ActionsPanel/Actions/Attack" to="battle" method="_on_Attack_pressed"]
[connection signal="pressed" from="battle/ActionsPanel/Actions/Defend" to="battle" method="_on_Defend_pressed"]
[connection signal="pressed" from="battle/ActionsPanel/Actions/Run" to="battle" method="_on_Run_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
